Major update to front page.

--- a/includes/template.html
+++ b/includes/template.html
@@ -3,6 +3,8 @@
 <head>
 <title>{{TITLE}}</title>
 <link rel="stylesheet" href="/media/styles.css" />
+<script src="/media/jquery-1.7.1.min.js">
+</script>
 <script src="/media/script.js">
 </script>
 </head>
