--- a/media/styles.css
+++ b/media/styles.css
@@ -108,3 +108,10 @@ span.error {
 	width: auto;
 	clear: none;
 }
+#colourlegend-content {
+	padding: 2px 10px;
+}
+#colourlegend-content div {
+	padding: 2px 4px;
+	margin-top: 2px;
+}
